Sample session storage usage.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <%- include('header'); -%>
 
 	<h1><%= title %></h1>
-	<p>Welcome to <%= title %></p>
+	<p>Session ID: <%= sid %></p>
+	<p>Total Views: <%= views %></p>
 
 <%- include('footer'); -%>
